--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -6,6 +6,20 @@
     <string name="file_saved">Datei erfolgreich gespeichert</string>
     <string name="invalid_file_format">Invalid file format</string>
 
+    <!-- Renaming -->
+    <string name="rename_file">Datei umbenennen</string>
+    <string name="rename_folder">Ordner umbenennen</string>
+    <string name="rename_file_error">Konnte die Datei nicht umbenennen</string>
+    <string name="rename_folder_error">Konnte den Ordner nicht umbenennen</string>
+    <string name="rename_folder_empty">Ordnername darf nicht leer sein</string>
+    <string name="rename_folder_exists">Ein Ordner mit diesem Namen existiert bereits</string>
+    <string name="rename_folder_root">Root-Ordner des Speichers kann nicht umbenannt werden</string>
+    <string name="rename_folder_ok">Ordner erfolgreich umbenannt</string>
+    <string name="renaming_folder">Ordner umbennenen</string>
+    <string name="filename_cannot_be_empty">Dateiname darf nicht leer sein</string>
+    <string name="filename_invalid_characters">Dateiname enthält ungültige Zeichen</string>
+    <string name="extension_cannot_be_empty">Dateiendung darf nicht leer sein</string>
+
     <!-- Copy / Move -->
     <string name="copy">Kopieren</string>
     <string name="move">Verschieben</string>
@@ -28,11 +42,6 @@
     <string name="copying_success_partial">Einige Dateien konnten nicht kopiert werden</string>
     <string name="create_new_directory">Neuen Ordner erstellen</string>
     <string name="directory_exists">Es existiert bereits ein Ordner mit diesem Namen</string>
-
-    <!-- Create new file -->
-    <string name="filename_cannot_be_empty">Dateiname darf nicht leer sein</string>
-    <string name="filename_invalid_characters">Dateiname enthält ungültige Zeichen</string>
-    <string name="extension_cannot_be_empty">Dateiendung darf nicht leer sein</string>
 
     <!-- Create new folder -->
     <string name="create_new_folder">Neuen Ordner erstellen</string>
