--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -6,6 +6,20 @@
     <string name="file_saved">ファイルを正常に保存しました</string>
     <string name="invalid_file_format">Invalid file format</string>
 
+    <!-- Renaming -->
+    <string name="rename_file">ファイルの名前を変更</string>
+    <string name="rename_folder">フォルダーの名前を変更</string>
+    <string name="rename_file_error">ファイルの名前を変更できませんでした</string>
+    <string name="rename_folder_error">フォルダーの名前を変更できませんでした</string>
+    <string name="rename_folder_empty">フォルダー名は空にできません</string>
+    <string name="rename_folder_exists">その名前のフォルダーは既に存在します</string>
+    <string name="rename_folder_root">ストレージのルートフォルダーの名前を変更できません</string>
+    <string name="rename_folder_ok">フォルダーの名前を正常に変更しました</string>
+    <string name="renaming_folder">フォルダーの名前を変更中</string>
+    <string name="filename_cannot_be_empty">ファイル名は空にできません</string>
+    <string name="filename_invalid_characters">ファイル名に無効な文字が含まれています</string>
+    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
+
     <!-- Copy / Move -->
     <string name="copy">コピー</string>
     <string name="move">移動</string>
@@ -28,11 +42,6 @@
     <string name="copying_success_partial">一部のファイルがコピーできませんでした</string>
     <string name="create_new_directory">Create new directory</string>
     <string name="directory_exists">A directory with that name already exists</string>
-
-    <!-- Create new file -->
-    <string name="filename_cannot_be_empty">ファイル名は空にできません</string>
-    <string name="filename_invalid_characters">ファイル名に無効な文字が含まれています</string>
-    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
 
     <!-- Create new folder -->
     <string name="create_new_folder">Create new folder</string>
