--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -6,6 +6,20 @@
     <string name="file_saved">Dosya başarıyla kaydedildi</string>
     <string name="invalid_file_format">Invalid file format</string>
 
+    <!-- Renaming -->
+    <string name="rename_file">Dosyayı yeniden adlandır</string>
+    <string name="rename_folder">Klasörü yeniden adlandır</string>
+    <string name="rename_file_error">Dosya yeniden adlandırılamadı</string>
+    <string name="rename_folder_error">Klasör yeniden adlandırılamadı</string>
+    <string name="rename_folder_empty">Klasör adı boş olmamalıdır</string>
+    <string name="rename_folder_exists">Bu ada sahip bir klasör zaten var</string>
+    <string name="rename_folder_root">Depolama kök klasörü yeniden adlandırılamıyor</string>
+    <string name="rename_folder_ok">Klasör başarıyla yeniden adlandırıldı</string>
+    <string name="renaming_folder">Klasörü yeniden adlandır</string>
+    <string name="filename_cannot_be_empty">Dosya adı boş olamaz</string>
+    <string name="filename_invalid_characters">Dosya adı geçersiz karakter içeriyor</string>
+    <string name="extension_cannot_be_empty">Uzantı boş olamaz</string>
+
     <!-- Kopyala / Taşı -->
     <string name="copy">Kopyala</string>
     <string name="move">Taşı</string>
@@ -28,11 +42,6 @@
     <string name="copying_success_partial">Bazı dosyalar kopyalanamadı</string>
     <string name="create_new_directory">Yeni dizin oluştur</string>
     <string name="directory_exists">Bu ada sahip bir dizin zaten var</string>
-
-    <!-- Create new file -->
-    <string name="filename_cannot_be_empty">Dosya adı boş olamaz</string>
-    <string name="filename_invalid_characters">Dosya adı geçersiz karakter içeriyor</string>
-    <string name="extension_cannot_be_empty">Uzantı boş olamaz</string>
 
     <!-- Yeni klasör oluştur -->
     <string name="create_new_folder">Yeni klasör oluştur</string>
