--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -5,6 +5,7 @@
     <string name="save_as">Salva come </string>
     <string name="file_saved">File salvato correttamente</string>
     <string name="invalid_file_format">Invalid file format</string>
+    <string name="no_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
@@ -37,15 +38,16 @@
     <string name="copy_move_failed">Si è verificato un errore</string>
     <string name="moving">Spostamento&#8230;</string>
     <string name="moving_success">File spostati correttamente</string>
-    <string name="file_exists">Esiste già un file con questo nome</string>
     <string name="moving_success_partial">Alcuni file non possono essere spostati</string>
     <string name="copying_success_partial">Alcuni file non possono essere copiati</string>
-    <string name="create_new_directory">Crea una cartella nuova</string>
-    <string name="directory_exists">Esiste già una cartella con quel nome</string>
+    <string name="folder_exists">Esiste già una cartella con quel nome</string>
 
-    <!-- Create new folder -->
+    <!-- Create new -->
+    <string name="create_new">Create new</string>
+    <string name="folder">Folder</string>
+    <string name="file">File</string>
     <string name="create_new_folder">Create new folder</string>
-    <string name="name_taken">Directory or file with that name already exists</string>
+    <string name="name_taken">A file or folder with that name already exists</string>
     <string name="invalid_name">Il nome contiene caratteri non validi</string>
     <string name="empty_name">Please enter a name</string>
     <string name="unknown_error_occurred">Riscontrato un errore sconosciuto</string>
@@ -65,7 +67,7 @@
     <string name="confirm_storage_access_text">Scegli la root della scheda SD nella prossima schermata, per consentire i permessi di scrittura</string>
 
     <plurals name="items">
-        <item quantity="one">1 elemento</item>
+        <item quantity="one">%1$d elemento</item>
         <item quantity="other">%1$d elementi</item>
     </plurals>
 
@@ -137,6 +139,7 @@
     <!-- Settings -->
     <string name="settings">Impostazioni</string>
     <string name="customize_colors">Personalizza i colori</string>
+    <string name="show_hidden">Mostra file e cartelle nascosti</string>
 
     <!-- About -->
     <string name="about">Informazioni</string>
