--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -5,6 +5,7 @@
     <string name="save_as">Guardar como</string>
     <string name="file_saved">Ficheiro guardado com sucesso</string>
     <string name="invalid_file_format">Invalid file format</string>
+    <string name="no_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear ficheiro</string>
@@ -37,13 +38,14 @@
     <string name="copy_move_failed">Ocorreu um erro ao copiar</string>
     <string name="moving">A mover&#8230;</string>
     <string name="moving_success">Ficheiros movidos com sucesso</string>
-    <string name="file_exists">Já existe um ficheiro com este nome</string>
     <string name="moving_success_partial">Alguns ficheiros não foram movidos</string>
     <string name="copying_success_partial">Alguns ficheiros não foram copiados</string>
-    <string name="create_new_directory">Criar novo diretório</string>
-    <string name="directory_exists">Já existe em diretório com este nome</string>
+    <string name="no_files_selected">No files selected</string>
 
-    <!-- Create new folder -->
+    <!-- Create new -->
+    <string name="create_new">Create new</string>
+    <string name="folder">Folder</string>
+    <string name="file">File</string>
     <string name="create_new_folder">Criar nova pasta</string>
     <string name="name_taken">Já existe um ficheiro ou pasta com este nome</string>
     <string name="invalid_name">O nome contém caracteres inválidos</string>
@@ -65,7 +67,7 @@
     <string name="confirm_storage_access_text">Por favor escolha a pasta raiz do cartão SD no próximo ecrã para conceder acesso de escrita</string>
 
     <plurals name="items">
-        <item quantity="one">1 item</item>
+        <item quantity="one">%1$d item</item>
         <item quantity="other">%1$d itens</item>
     </plurals>
 
@@ -137,6 +139,7 @@
     <!-- Settings -->
     <string name="settings">Definições</string>
     <string name="customize_colors">Personalizar cores</string>
+    <string name="show_hidden">Mostrar ficheiros e pastas ocultos</string>
 
     <!-- About -->
     <string name="about">Acerca</string>
