--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -5,6 +5,7 @@
     <string name="save_as">Spara som</string>
     <string name="file_saved">Filen sparad</string>
     <string name="invalid_file_format">Invalid file format</string>
+    <string name="no_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Döp om fil</string>
@@ -37,13 +38,14 @@
     <string name="copy_move_failed">Ett fel har uppstått</string>
     <string name="moving">Flyttar&#8230;</string>
     <string name="moving_success">Filerna har flyttats</string>
-    <string name="file_exists">En fil med det namnet finns redan</string>
     <string name="moving_success_partial">Några filer gick inte att flytta</string>
     <string name="copying_success_partial">Några filer gick inte att kopiera</string>
-    <string name="create_new_directory">Skapa ny mapp</string>
-    <string name="directory_exists">En katalog med det namnet finns redan</string>
+    <string name="no_files_selected">No files selected</string>
 
-    <!-- Create new folder -->
+    <!-- Create new -->
+    <string name="create_new">Create new</string>
+    <string name="folder">Folder</string>
+    <string name="file">File</string>
     <string name="create_new_folder">Skapa ny mapp</string>
     <string name="name_taken">Katalogen eller filen finns redan med det namnet</string>
     <string name="invalid_name">Namnet innehåller ogiltiga tecken</string>
@@ -65,7 +67,7 @@
     <string name="confirm_storage_access_text">Välj rotmappen på ditt SD-kort på nästa skärmnbild, för att bevilja skrivrättigheter</string>
 
     <plurals name="items">
-        <item quantity="one">1 objekt</item>
+        <item quantity="one">%1$d objekt</item>
         <item quantity="other">%1$d objekt</item>
     </plurals>
 
@@ -137,6 +139,7 @@
     <!-- Settings -->
     <string name="settings">Inställningar</string>
     <string name="customize_colors">Egna färger</string>
+    <string name="show_hidden">Visa dolda filer</string>
 
     <!-- About -->
     <string name="about">Om</string>
