--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -5,6 +5,7 @@
     <string name="save_as">Farklı kaydet</string>
     <string name="file_saved">Dosya başarıyla kaydedildi</string>
     <string name="invalid_file_format">Invalid file format</string>
+    <string name="no_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">Dosyayı yeniden adlandır</string>
@@ -20,7 +21,7 @@
     <string name="filename_invalid_characters">Dosya adı geçersiz karakter içeriyor</string>
     <string name="extension_cannot_be_empty">Uzantı boş olamaz</string>
 
-    <!-- Kopyala / Taşı -->
+    <!-- Copy / Move -->
     <string name="copy">Kopyala</string>
     <string name="move">Taşı</string>
     <string name="copy_move">Kopyala / Taşı</string>
@@ -37,20 +38,21 @@
     <string name="copy_move_failed">Bir hata oluştu</string>
     <string name="moving">Taşıma&#8230;</string>
     <string name="moving_success">Dosyalar başarıyla taşındı</string>
-    <string name="file_exists">Bu ada sahip bir dosya zaten var</string>
     <string name="moving_success_partial">Bazı dosyalar taşınamadı</string>
     <string name="copying_success_partial">Bazı dosyalar kopyalanamadı</string>
-    <string name="create_new_directory">Yeni dizin oluştur</string>
-    <string name="directory_exists">Bu ada sahip bir dizin zaten var</string>
+    <string name="no_files_selected">No files selected</string>
 
-    <!-- Yeni klasör oluştur -->
+    <!-- Create new -->
+    <string name="create_new">Create new</string>
+    <string name="folder">Folder</string>
+    <string name="file">File</string>
     <string name="create_new_folder">Yeni klasör oluştur</string>
     <string name="name_taken">Bu ada sahip dizin veya dosya zaten var</string>
     <string name="invalid_name">İsim, geçersiz karakterler içeriyor</string>
     <string name="empty_name">Lütfen bir isim girin</string>
     <string name="unknown_error_occurred">Bilinmeyen bir hata oluştu</string>
 
-    <!-- Kopyalama çakışmaları -->
+    <!-- Copy conflicts -->
     <string name="file_already_exists">Dosya $%1s zaten mevcut</string>
     <string name="select_an_action">Bir eylem seçin</string>
     <string name="overwrite">Üzerine yaz</string>
@@ -58,24 +60,24 @@
     <string name="append">İle ekle \'_1\'</string>
     <string name="apply_to_all">Tüm çatışmalara uygula</string>
 
-    <!-- Dosya seçici -->
+    <!-- File picker -->
     <string name="select_folder">Bir klasör seçin</string>
     <string name="select_file">Bir dosya seçin</string>
     <string name="confirm_storage_access_title">Harici depolama erişimini onayla</string>
     <string name="confirm_storage_access_text">Yazma erişimi vermek için lütfen bir sonraki ekranda SD kartın kök klasörünü seçin</string>
 
     <plurals name="items">
-        <item quantity="one">1 öğe</item>
+        <item quantity="one">%1$d öğe</item>
         <item quantity="other">öğeler %1$d</item>
     </plurals>
 
-    <!-- Depolama -->
+    <!-- Storages -->
     <string name="select_storage">Depolama alanını seç</string>
     <string name="internal">Dahili</string>
     <string name="sd_card">SD Kart</string>
     <string name="root">Kök</string>
 
-    <!-- Dosya özellikleri -->
+    <!-- File properties -->
     <string name="properties">Özellikleri</string>
     <string name="path">Yol</string>
     <string name="items_selected">Seçilen öğeler</string>
@@ -90,7 +92,7 @@
     <string name="iso_speed">ISO hızı</string>
     <string name="f_number">F-numarası</string>
 
-    <!-- Renk özelleştirme -->
+    <!-- Color customization -->
     <string name="background_color">Arkaplan rengi</string>
     <string name="text_color">Metin rengi</string>
     <string name="primary_color">Ana renk</string>
@@ -105,11 +107,11 @@
     <string name="undo_changes_confirmation">Değişikliklerinizi geri almak istediğinizden emin misiniz?</string>
     <string name="save_before_closing">Kaydedilmemiş değişiklikleriniz var. Çıkmadan önce kaydet?</string>
 
-    <!-- Ne var ne yok -->
+    <!-- What's new -->
     <string name="whats_new">Ne var\'s ne yok</string>
     <string name="whats_new_disclaimer">* yalnızca daha büyük güncellemeler burada listeleniyor, daima küçük geliştirmeler de var</string>
 
-    <!-- Eylem çubuğu öğeleri -->
+    <!-- Actionbar items -->
     <string name="delete">Sil</string>
     <string name="rename">Yeniden adlandır</string>
     <string name="share">Paylaş</string>
@@ -127,8 +129,9 @@
     <string name="extension">Uzantı</string>
     <string name="ascending">Artan</string>
     <string name="descending">Azalan</string>
+    <string name="use_for_this_folder">Use for this folder only</string>
 
-    <!-- Onay iletişim kutusu -->
+    <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Silme işlemine devam etmek istediğinizden emin misiniz?</string>
     <string name="yes">Evet</string>
     <string name="no">Hayır</string>
@@ -136,8 +139,9 @@
     <!-- Settings -->
     <string name="settings">Ayarlar</string>
     <string name="customize_colors">Renkleri özelleştirme</string>
+    <string name="show_hidden">Gizli dosyaları ve dizinleri göster</string>
 
-    <!-- Hakkında -->
+    <!-- About -->
     <string name="about">Hakkında</string>
     <string name="website_label">Kaynak kodları için ziyaret edin</string>
     <string name="email_label">Görüşlerinizi veya önerilerinizi buraya gönderin</string>
@@ -151,7 +155,7 @@
     <string name="follow_us">Bizi takip et:</string>
     <string name="copyright">v %1$s\nTelif Hakkı © Simple Mobile Tools %2$d</string>
 
-    <!-- Lisans -->
+    <!-- License -->
     <string name="notice">Bu uygulama hayatımı kolaylaştırmak için aşağıdaki üçüncü parti kitaplıklarını kullanıyor. Teşekkür ederim.</string>
     <string name="third_party_licences">Üçüncü taraf lisansları</string>
     <string name="kotlin_title">Kotlin (programlama dili)</string>
