--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -5,6 +5,7 @@
     <string name="save_as">保存</string>
     <string name="file_saved">文件保存成功</string>
     <string name="invalid_file_format">Invalid file format</string>
+    <string name="no_permissions">We need the permission to access your storage</string>
 
     <!-- Renaming -->
     <string name="rename_file">重命名文件</string>
@@ -37,13 +38,14 @@
     <string name="copy_move_failed">操作失败</string>
     <string name="moving">移动中&#8230;</string>
     <string name="moving_success">文件移动成功</string>
-    <string name="file_exists">相同的文件名已经存在</string>
     <string name="moving_success_partial">相同文件不能移动</string>
     <string name="copying_success_partial">相同文件不能复制</string>
-    <string name="create_new_directory">Create new directory</string>
-    <string name="directory_exists">A directory with that name already exists</string>
+    <string name="no_files_selected">No files selected</string>
 
-    <!-- Create new folder -->
+    <!-- Create new -->
+    <string name="create_new">Create new</string>
+    <string name="folder">Folder</string>
+    <string name="file">File</string>
     <string name="create_new_folder">Create new folder</string>
     <string name="name_taken">Directory or file with that name already exists</string>
     <string name="invalid_name">The name contains invalid characters</string>
@@ -65,7 +67,7 @@
     <string name="confirm_storage_access_text">Please choose the root folder of the SD card on the next screen, to grant write access</string>
 
     <plurals name="items">
-        <item quantity="one">1 item</item>
+        <item quantity="one">%1$d item</item>
         <item quantity="other">%1$d items</item>
     </plurals>
 
@@ -137,6 +139,7 @@
     <!-- Settings -->
     <string name="settings">Settings</string>
     <string name="customize_colors">Customize colors</string>
+    <string name="show_hidden">Show hidden files and folders</string>
 
     <!-- About -->
     <string name="about">关于</string>
